--- a/src/views/home.css
+++ b/src/views/home.css
@@ -4,25 +4,25 @@
   min-height: 100vh;
 }
  
-.home-hero-section {
+.home-thq-hero-section-elm {
   height: 836px;
   padding-bottom: 169px;
 }
  
-.home-hero-background {
+.home-thq-hero-background-elm {
   height: 832px;
 }
  
-.home-hero-background-image {
+.home-thq-hero-background-image-elm {
   width: 1920px;
   height: 994px;
 }
  
-.home-hero-overlay {
+.home-thq-hero-overlay-elm {
   height: 1013px;
 }
  
-.home-hero-container {
+.home-thq-hero-container-elm {
   width: 1307px;
   height: 887px;
   margin-left: 0px;
@@ -33,35 +33,35 @@
   padding-bottom: 0px;
 }
  
-.home-hero-title {
+.home-thq-hero-title-elm {
   line-height: 1.4;
 }
  
-.home-services-card-image1 {
+.home-thq-services-card-image-elm1 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
 }
  
-.home-services-card-image2 {
+.home-thq-services-card-image-elm2 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
 }
  
-.home-services-card-image3 {
+.home-thq-services-card-image-elm3 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
 }
  
-.home-services-card-image4 {
+.home-thq-services-card-image-elm4 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
 }
  
-.home-services-card-image5 {
+.home-thq-services-card-image-elm5 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
 }
  
-.home-services-card-image6 {
+.home-thq-services-card-image-elm6 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
 }
  
-.home-cta-overlay {
+.home-thq-cta-overlay-elm {
   height: 973px;
 }
  
@@ -74,106 +74,106 @@
 }
  
 @media(max-width: 1600px) {
-  .home-hero-background-image {
+  .home-thq-hero-background-image-elm {
     width: 1600px;
     height: 992px;
   }
-  .home-hero-overlay {
+  .home-thq-hero-overlay-elm {
     height: 1016px;
     padding-bottom: var(--dl-layout-space-unit);
   }
-  .home-hero-container {
+  .home-thq-hero-container-elm {
     width: 1150px;
     height: 983px;
     padding-top: 213px;
     margin-right: 0px;
     padding-left: 0px;
   }
-  .home-hero-content {
+  .home-thq-hero-content-elm {
     width: 1015px;
     height: 565px;
   }
 }
  
 @media(max-width: 991px) {
-  .home-hero-background-image {
+  .home-thq-hero-background-image-elm {
     width: 991px;
     height: 968px;
   }
-  .home-hero-overlay {
+  .home-thq-hero-overlay-elm {
     height: 967px;
   }
-  .home-hero-container {
+  .home-thq-hero-container-elm {
     width: 958px;
     height: 1126px;
   }
-  .home-hero-content {
+  .home-thq-hero-content-elm {
     width: 614px;
     height: 474px;
   }
-  .home-hero-title {
+  .home-thq-hero-title-elm {
     text-transform: capitalize;
   }
 }
  
 @media(max-width: 767px) {
-  .home-hero-background-image {
+  .home-thq-hero-background-image-elm {
     width: 759px;
     height: 794px;
   }
 }
  
 @media(max-width: 479px) {
-  .home-hero-section {
+  .home-thq-hero-section-elm {
     height: 785px;
     padding-bottom: 140px;
   }
-  .home-hero-background {
+  .home-thq-hero-background-elm {
     width: 479px;
     height: 716px;
   }
-  .home-hero-background-image {
+  .home-thq-hero-background-image-elm {
     width: 100%;
     height: 528px;
   }
-  .home-hero-overlay {
+  .home-thq-hero-overlay-elm {
     width: 479px;
     height: 716px;
     padding-bottom: 12px;
   }
-  .home-hero-container {
+  .home-thq-hero-container-elm {
     width: 455px;
     height: 722px;
     padding-top: 90px;
     padding-left: 5px;
     padding-right: 4px;
   }
-  .home-hero-content {
+  .home-thq-hero-content-elm {
     width: 376px;
     height: 415px;
   }
-  .home-hero-title {
+  .home-thq-hero-title-elm {
     width: 428px;
     height: 293px;
     line-height: 1.4;
   }
-  .home-hero-subtitle {
+  .home-thq-hero-subtitle-elm {
     width: 346px;
     height: 132px;
   }
-  .home-hero-values {
+  .home-thq-hero-values-elm {
     width: 263px;
     height: 100px;
   }
-  .home-hero-value-item1 {
+  .home-thq-hero-value-item-elm1 {
     width: 350px;
     height: 49px;
   }
-  .home-hero-value-item3 {
+  .home-thq-hero-value-item-elm3 {
     width: 329px;
     height: 67px;
   }
-  .home-about-section {
+  .home-thq-about-section-elm {
     height: 1623px;
     padding-top: 67px;
   }
